<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Square calculator</string>
    <string name="enter_number">Enter number</string>
    <string name="calc_button">Calc</string>
    <string name="result_desc">x^2 =</string>
    <string name="search_button">Search</string>
    <string name="enter_search">Search…</string>
    <string name="result_desc_search">Found:</string>
    <string name="comment_calc_done">something calculated…</string>
    <string name="comment_search_done">something found…</string>
    <string name="comment_working_with">user is working with %s module…</string>
    <string name="search_some"> some %s\'s</string>

</resources>
