<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Container">

    <Button
        android:id="@+id/search"
        android:text="@string/search_button"
        style="@style/Button" />

    <EditText
        android:id="@+id/edit_query"
        android:hint="@string/enter_search"
        android:layout_toStartOf="@id/search"
        android:layout_alignBaseline="@id/search"
        style="@style/Edit" />

    <TextView
        android:id="@+id/result_desc_search"
        android:text="@string/result_desc_search"
        android:layout_below="@id/edit_query"
        style="@style/Text.ResultDesc" />

    <TextView
        android:id="@+id/result_search"
        android:layout_toEndOf="@id/result_desc_search"
        android:layout_alignBaseline="@id/result_desc_search"
        style="@style/Text.Result.Search" />

</RelativeLayout>
