<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Container">

    <Button
        android:id="@+id/calc"
        android:text="@string/calc_button"
        style="@style/Button" />

    <EditText
        android:id="@+id/edit_number"
        android:hint="@string/enter_number"
        android:layout_toStartOf="@id/calc"
        android:layout_alignBaseline="@id/calc"
        android:inputType="number"
        style="@style/Edit">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/result_desc"
        android:text="@string/result_desc"
        android:layout_below="@id/edit_number"
        style="@style/Text.ResultDesc" />

    <TextView
        android:id="@+id/result"
        android:layout_toEndOf="@id/result_desc"
        android:layout_alignBaseline="@id/result_desc"
        style="@style/Text.Result" />

</RelativeLayout>
