<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.netimen.androidmodules.apidemos.CalcFragment_"
        android:id="@+id/fragment_calc"
        tools:layout="@layout/fragment_calc" />

    <fragment
        android:layout_marginTop="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.netimen.androidmodules.apidemos.SearchFragment_"
        android:id="@+id/fragment_search"
        tools:layout="@layout/fragment_search" />

    <TextView
        android:id="@+id/comment"
        android:layout_marginTop="@dimen/margin"
        android:textStyle="italic"
        style="@style/Widget" />
</LinearLayout>